# pipelines

./: .gitignore  .pre-commit-config.yaml  README.md  frontend_migrate.py  package-lock.json  package.json
backend/: .pre-commit-config.yaml  alembic.ini  main.py  migrate_ai.py  modify_models.py  pyproject.toml  test_pipeline.py  worker.py
backend/api/: __init__.py  configs.py  datasets.py  models.py  pipelines.py  runs.py  task_types.py
backend/api/counter/: __init__.py  counter.py
backend/core/: config.py
backend/db/: README.md
backend/db/migrations/: env.py
backend/db/migrations/versions/: 1dedbaf23acf_add_pipeline_models.py
backend/db/model/: __init__.py  dataset.py  enums.py  model.py  pipeline.py  project.py  run.py
backend/internal/: README.md
backend/libs/database/: connect.py
backend/libs/file_system/: s3.py  utils.py
backend/libs/job/: base.py  executor.py  registry.py  task_base.py
backend/libs/logger/: __init__.py  log.py  logging.ini  middleware.py  tracing.py
backend/libs/utils/: extract_compress.py  file.py
backend/schemas/: counter.py  pipeline.py  run.py
backend/scratch/: check_db.py  check_registry.py  fix_db.py  import_infra_data.py
backend/services/: dataset_service.py  training_service.py
backend/tasks/: README.md  __init__.py  io_tasks.py  math_tasks.py  raster_tasks.py  storage_tasks.py  system_tasks.py  vector_tasks.py
frontend/: example.env  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  (+1 more)
(+99 files in other folders)
