[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.0",
    "fiona>=1.10.1",
    "geopandas>=1.1.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.26",
    "rasterio>=1.4.4",
    "scikit-image>=0.25.2",
    "sqlalchemy>=2.0.46",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
]
